fixed grid based spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -249,6 +249,7 @@ footer{text-align:center}.social{text-align:center}}
     .card {
       height: 200px;
       margin-bottom: 10px;
+      margin-right: 10px;
 
     }
   }
